PREVIOUS COMMIT: First display of coverflow load all present in 1st category (didn't work for example for pictures in 0 category which should be hidden) CURRENT COMMIT: Fix for accent, and remove (optionnal for details) ';' of xxx.txt end of line Smaller font-size/weight for icons in toolbar

--- a/LiliShowcase/src/main/java/com/brice/lili/showcase/client/styles/button/cell/DarkButtonCell.css
+++ b/LiliShowcase/src/main/java/com/brice/lili/showcase/client/styles/button/cell/DarkButtonCell.css
@@ -32,9 +32,11 @@
 
 .text {
   padding: 0px 2px;
-  font-family: Tahoma, Arial, Verdana, sans-serif;
+  font-family: helvetica,elvetica;
   font-size: 11px;
   font-weight: normal;
+  font-style: normal;
+  line-height: 15px;
   text-align: center;
   cursor: pointer;
   white-space: nowrap;
@@ -117,9 +119,9 @@
   height: auto;
   
   font-family: helvetica,elvetica;
-  font-size: 13px;
+  font-size: 11px;
   font-weight: bold;
-  font-style: italic;
+  font-style: normal;
   line-height: 15px;
   color: #CCCCCC;
 }
