--- a/LiliShowcase/src/main/java/com/brice/lili/showcase/client/styles/toolbar/DarkToolBar.css
+++ b/LiliShowcase/src/main/java/com/brice/lili/showcase/client/styles/toolbar/DarkToolBar.css
@@ -21,9 +21,9 @@
   height: auto;
   
   font-family: helvetica,elvetica;
-  font-size: 13px;
+  font-size: 11px;
   font-weight: bold;
-  font-style: italic;
+  font-style: normal;
   line-height: 15px;
   color: #DDDDDD;
 }
